--- a/assets/p-dialog.css
+++ b/assets/p-dialog.css
@@ -138,9 +138,15 @@ dialog:-internal-dialog-in-top-layer {
 .info-tab, .abilities-tab, .stats-tab, .evolution-tab{
     flex-direction: column;
 }
+
+#about {
+    padding: 8px;
+    gap: 8px;
+}
+
 #about p, #about div {
     font-size: var(--font-size-large); 
-    padding: 5px 0;
+    padding: 5px;
 }
 
 .description, .abilities {
@@ -218,8 +224,9 @@ table tr td:nth-child(2) {
     height: auto;
     display: flex;
     justify-content: space-evenly;
-    align-items: space-evenly;
+    align-items: flex-start;
     flex-wrap: wrap;
+    margin-top: 10px;
     overflow-y: auto;
 }
 
@@ -242,6 +249,8 @@ table tr td:nth-child(2) {
 .evolution-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 15px;
 }
 .pokemon-evolutions {
@@ -281,10 +290,13 @@ p.min_level {
     .dialog-body {
         width: auto;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        align-items: center;
+        height: auto;
+        padding: 10px;
     }
     .dialog-pokemon-types {
-        flex-direction: column;
+        flex-direction: row;
         width: 200px;
         height: auto;
         gap: 0;
@@ -320,6 +332,9 @@ p.min_level {
         flex-direction: row;
         justify-content: space-evenly;
     }
+    .dialog-pokemon-image {
+        max-height: 200px;
+    }
     
 }
 @media (max-width: 612px) {
@@ -346,8 +361,8 @@ p.min_level {
         min-width: 100%;
         min-height: 100vh;;
     }
-    .evolution-tab {
-        flex-direction: column;
+.evolution-container {
+        padding: 5px;
     }
     .pokemon-evolutions {
         padding: 0;
@@ -364,6 +379,9 @@ p.min_level {
     }
     .dialog-body-content {
         height: 100vh;
+    }
+    .dialog-body {
+        height: 280px;
     }
 }
 
