--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 html {
     scrollbar-width: thin;    
     scrollbar-color: var(--accent-color) var(--second-bg-color);
-    overflow-x: hidden;
     width: 100%;
 }
 
